src/BootstrapBlazor/Components/Table/Table.css
/* ... */
.table-resize thead th,
.table-resize tbody td {
    position: relative;
}

    .table-resize thead th .col-resizer {
        width: .25rem;
        display: block;
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        cursor: col-resize;
    }

.table-resize .border-resize {
    border-right: 1px solid #409eff;
}

.table .table-cell.is-tree {
    cursor: pointer;
}

.table-cell.is-incell {
    margin: -7px -6px;
}

    .table-cell.is-incell .switch {
        padding-left: 6px;
    }

    .table-cell.is-incell .select {
        width: 100%;
    }

.table-cell .is-node .is-tree {
    transition: transform .3s linear;
}

.table-sm .table-cell.is-incell {
    margin: -.25rem;
}

    .table-sm .table-cell.is-incell .form-control {
        height: calc(1.5em + .75rem -3px);
    }

    .table-sm .table-cell.is-incell .switch {
        height: 30px;
        padding-left: 4px;
    }

.table-bordered thead tr:last-child > th {
    border-bottom-width: 2px !important;
    border-bottom-color: var(--bs-secondary);
}

.table-striped > tbody > tr.is-master:nth-of-type(4n+1) {
    --bs-table-accent-bg: var(--bs-table-striped-bg);
    color: var(--bs-table-striped-color);
}

.table-wrapper .empty-text {
    padding: 1rem;
}

form .table .table-cell > .form-label {
    display: none;
}

form .table .table-cell > textarea {
    width: 100%;
}

.table-search .card-header {
    padding: 0;
}

    .table-search .card-header .table-search-title {
        padding: .5rem 1rem;
        flex: 1;
        cursor: pointer;
    }

    .table-search .card-header .table-search-buttons {
        padding: .25rem 1rem;
    }

        .table-search .card-header .table-search-buttons .btn {
            padding: .275rem .5rem;
        }

.table-search-collapse {
    flex: 1;
    display: flex;
    align-items: center;
    padding: 0 1rem;
    white-space: nowrap;
}

    .table-search-collapse .table-search-collapse-arrow {
        cursor: pointer;
        transition: .3s transform linear;
        transform: rotate(0);
    }

    .table-search-collapse.is-open .table-search-collapse-arrow {
        transform: rotate(90deg);
    }

    .table-search-collapse .table-search-collapse-title {
        cursor: pointer;
        margin-left: .5rem;
        flex: 1;
        padding: .5rem 0;
    }

.table-search .collapsed .card-header {
    border-bottom-color: transparent;
}

.table-search .card-header .input-group,
.table-search .collapsed .input-group + .table-search-buttons {
    display: none;
}

.table-search .card-header .input-group {
    width: auto;
    padding: 2px;
}

    .table-search .card-header .input-group .table-toolbar-search,
    .table-search .card-header .input-group .btn {
        height: 34px;
    }

.table-search .collapsed .input-group {
    display: flex;
}

.table-excel-toolbar {
    display: none;
    position: absolute;
}

.table-excel.table > :not(caption):not(thead) > * > * {
    padding: 0;
}

.table-excel.table > :not(caption):not(thead) > * > .table-column-button {
    padding: 6px 12px;
}

.table-excel > tbody .is-bar {
    padding: .5rem 0;
}

.table-excel > tbody > tr > td > .table-cell > .form-check {
    padding: 6px 8px;
}

.table-excel .active > td > .table-cell .form-control,
.table-excel .active > td > .table-cell .form-select {
    background-color: transparent;
}

.table-excel .table-cell .select {
    width: 100%;
}

.table-excel .table-cell > .disabled {
    background-color: var(--bb-disabled-bg);
    width: 100%;
    padding: .375rem .1875rem;
}

.table-excel .datetime-picker-input {
    padding-left: 2rem;
}

.table-excel .datetime-picker-input-icon {
    line-height: 32px;
}

.table-cell.text-center,
.table-cell.text-center .switch {
    justify-content: center;
}

    .table-cell.text-center input {
        text-align: center;
    }

.table-cell.text-end,
.table-cell.text-end .switch {
    justify-content: end;
}

    .table-cell.text-end input {
        text-align: right;
    }

.table-cell > .progress {
    flex: 1;
}

.table-cell.is-ph {
    height: 12.5px;
    background-color: #e9ecef;
    border-radius: var(--bs-border-radius);
    margin: 5px 0;
}

.table-cell .is-dbcell {
    display: flex;
    cursor: pointer;
    position: relative;
}

    .table-cell .is-dbcell:hover:before {
        content: "";
        position: absolute;
        bottom: -3px;
        height: 1px;
        width: 100%;
        background-color: var(--bs-primary);
    }

.table-cell .is-node {
    width: 18px;
}

.table-cell .tag {
    line-height: 22px;
}

.table-cell .is-color {
    width: 28px;
    height: 21px;
    border-radius: 0.25rem;
}

.form-footer {
    margin-top: .5rem;
}

.modal-body .form-footer {
    margin: 1rem -1rem 0 -1rem;
    padding: 1rem 1rem 0 1rem;
    border-top: 1px solid #dee2e6;
    text-align: right;
}

    .modal-body .form-footer button:not(:last-child) {
        margin-right: .25rem;
    }

.modal-dialog-table.modal-dialog-scrollable .modal-body {
    display: flex;
    flex-direction: column;
}

    .modal-dialog-table.modal-dialog-scrollable .modal-body > form {
        overflow: hidden;
        display: flex;
        flex-direction: column;
        flex: 1;
        margin: -1rem;
    }

    .modal-dialog-table.modal-dialog-scrollable .modal-body .form-body {
        overflow-y: auto;
        overflow-x: hidden;
        padding: 1rem;
    }

    .modal-dialog-table.modal-dialog-scrollable .modal-body .form-footer {
        margin: 0;
        padding: 1rem;
    }

.table-wrap thead th .table-cell .table-text {
    white-space: pre-wrap;
}

.table-page-info {
    display: flex;
    align-items: center;
}

    .table-page-info .select {
        width: 120px;
    }

